[build-system]
requires=["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name="openmateo-notify"
version="0.0.1"
authors = [
    {name = "Michael Penhallegon", email = "mike@hematite.tech"}
]
description="A openmateo client"
requires-python = ">=3.11"
license = "apache-2.0"

[options.extras_require]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ipython",
    "ipdb",
    "isort"
]

[options.packages.find]
where = "src"


[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
markers = "integration: mark a test as an integration test"
ignore = [
    "data"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C", "B", 
    "D1", "D201", "D202", "D205", "D210", "D212", "D4",
    "E4", "E7", "E9", 
    "F", "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "^/s*/././." # for elipsis exclusion
]
exclude_also = [
    "if __name__ == .__main__." # fors script runners
]